package com.tricol.manage_supplier_orders.order.domain.enums;

public enum OrderStatus {
    PENDING,
    ARRIVED,
    COMPLETED,
    CANCELLED
}
